CompiladorMiniC/pruebas/Pruebas_sintactico/sintactico.output
Terminales no usados en la gramática

    DO
    FOR
    TO


Estado 68 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: IDEN PARI PARD LLAVI declarations statement_list LLAVD

    2 declarations: declarations VAR identifier_list PYCO
    3             | declarations CONST identifier_list PYCO
    4             | %empty

    5 identifier_list: identifier
    6                | identifier_list COMA identifier

    7 identifier: IDEN
    8           | IDEN ASIG expression

    9 statement_list: statement_list statement
   10               | %empty

   11 statement: IDEN ASIG expression PYCO
   12          | LLAVI statement_list LLAVD
   13          | IF PARI expression PARD statement ELSE statement
   14          | IF PARI expression PARD statement
   15          | WHILE PARI expression PARD statement
   16          | PRINT PARI print_list PARD PYCO
   17          | READ PARI read_list PARD PYCO

   18 print_list: print_item
   19           | print_list COMA print_item

   20 print_item: expression
   21           | CAD

   22 read_list: IDEN
   23          | read_list COMA IDEN

   24 expression: expression SUMA expression
   25           | expression REST expression
   26           | expression MULT expression
   27           | expression DIVI expression
   28           | REST expression
   29           | PARI expression PARD
   30           | IDEN
   31           | ENTERO


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    VAR (258) 2
    CONST (259) 3
    WHILE (260) 15
    DO (261)
    FOR (262)
    TO (263)
    IF (264) 13 14
    ELSE (265) 13
    PRINT (266) 16
    READ (267) 17
    PARI (268) 1 13 14 15 16 17 29
    PARD (269) 1 13 14 15 16 17 29
    LLAVI (270) 1 12
    LLAVD (271) 1 12
    PYCO (272) 2 3 11 16 17
    COMA (273) 6 19 23
    ASIG (274) 8 11
    IDEN <lexema> (275) 1 7 8 11 22 23 30
    ENTERO <lexema> (276) 31
    CAD <lexema> (277) 21
    SUMA (278) 24
    REST (279) 25 28
    MULT (280) 26
    DIVI (281) 27
    UMINUS (282)


No terminales con las reglas donde aparecen

    $accept (28)
        on left: 0
    program (29)
        on left: 1
        on right: 0
    declarations (30)
        on left: 2 3 4
        on right: 1 2 3
    identifier_list (31)
        on left: 5 6
        on right: 2 3 6
    identifier (32)
        on left: 7 8
        on right: 5 6
    statement_list (33)
        on left: 9 10
        on right: 1 9 12
    statement (34)
        on left: 11 12 13 14 15 16 17
        on right: 9 13 14 15
    print_list (35)
        on left: 18 19
        on right: 16 19
    print_item (36)
        on left: 20 21
        on right: 18 19
    read_list (37)
        on left: 22 23
        on right: 17 23
    expression (38)
        on left: 24 25 26 27 28 29 30 31
        on right: 8 11 13 14 15 20 24 25 26 27 28 29


Estado 0

    0 $accept: . program $end

    IDEN  desplazar e ir al estado 1

    program  ir al estado 2


Estado 1

    1 program: IDEN . PARI PARD LLAVI declarations statement_list LLAVD

    PARI  desplazar e ir al estado 3


Estado 2

    0 $accept: program . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 program: IDEN PARI . PARD LLAVI declarations statement_list LLAVD

    PARD  desplazar e ir al estado 5


Estado 4

    0 $accept: program $end .

    $default  aceptar


Estado 5

    1 program: IDEN PARI PARD . LLAVI declarations statement_list LLAVD

    LLAVI  desplazar e ir al estado 6


Estado 6

    1 program: IDEN PARI PARD LLAVI . declarations statement_list LLAVD

    $default  reduce usando la regla 4 (declarations)

    declarations  ir al estado 7


Estado 7

    1 program: IDEN PARI PARD LLAVI declarations . statement_list LLAVD
    2 declarations: declarations . VAR identifier_list PYCO
    3             | declarations . CONST identifier_list PYCO

    VAR    desplazar e ir al estado 8
    CONST  desplazar e ir al estado 9

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 10


Estado 8

    2 declarations: declarations VAR . identifier_list PYCO

    IDEN  desplazar e ir al estado 11

    identifier_list  ir al estado 12
    identifier       ir al estado 13


Estado 9

    3 declarations: declarations CONST . identifier_list PYCO

    IDEN  desplazar e ir al estado 11

    identifier_list  ir al estado 14
    identifier       ir al estado 13


Estado 10

    1 program: IDEN PARI PARD LLAVI declarations statement_list . LLAVD
    9 statement_list: statement_list . statement

    WHILE  desplazar e ir al estado 15
    IF     desplazar e ir al estado 16
    PRINT  desplazar e ir al estado 17
    READ   desplazar e ir al estado 18
    LLAVI  desplazar e ir al estado 19
    LLAVD  desplazar e ir al estado 20
    IDEN   desplazar e ir al estado 21

    statement  ir al estado 22


Estado 11

    7 identifier: IDEN .
    8           | IDEN . ASIG expression

    ASIG  desplazar e ir al estado 23

    $default  reduce usando la regla 7 (identifier)


Estado 12

    2 declarations: declarations VAR identifier_list . PYCO
    6 identifier_list: identifier_list . COMA identifier

    PYCO  desplazar e ir al estado 24
    COMA  desplazar e ir al estado 25


Estado 13

    5 identifier_list: identifier .

    $default  reduce usando la regla 5 (identifier_list)


Estado 14

    3 declarations: declarations CONST identifier_list . PYCO
    6 identifier_list: identifier_list . COMA identifier

    PYCO  desplazar e ir al estado 26
    COMA  desplazar e ir al estado 25


Estado 15

   15 statement: WHILE . PARI expression PARD statement

    PARI  desplazar e ir al estado 27


Estado 16

   13 statement: IF . PARI expression PARD statement ELSE statement
   14          | IF . PARI expression PARD statement

    PARI  desplazar e ir al estado 28


Estado 17

   16 statement: PRINT . PARI print_list PARD PYCO

    PARI  desplazar e ir al estado 29


Estado 18

   17 statement: READ . PARI read_list PARD PYCO

    PARI  desplazar e ir al estado 30


Estado 19

   12 statement: LLAVI . statement_list LLAVD

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 31


Estado 20

    1 program: IDEN PARI PARD LLAVI declarations statement_list LLAVD .

    $default  reduce usando la regla 1 (program)


Estado 21

   11 statement: IDEN . ASIG expression PYCO

    ASIG  desplazar e ir al estado 32


Estado 22

    9 statement_list: statement_list statement .

    $default  reduce usando la regla 9 (statement_list)


Estado 23

    8 identifier: IDEN ASIG . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 37


Estado 24

    2 declarations: declarations VAR identifier_list PYCO .

    $default  reduce usando la regla 2 (declarations)


Estado 25

    6 identifier_list: identifier_list COMA . identifier

    IDEN  desplazar e ir al estado 11

    identifier  ir al estado 38


Estado 26

    3 declarations: declarations CONST identifier_list PYCO .

    $default  reduce usando la regla 3 (declarations)


Estado 27

   15 statement: WHILE PARI . expression PARD statement

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 39


Estado 28

   13 statement: IF PARI . expression PARD statement ELSE statement
   14          | IF PARI . expression PARD statement

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 40


Estado 29

   16 statement: PRINT PARI . print_list PARD PYCO

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    CAD     desplazar e ir al estado 41
    REST    desplazar e ir al estado 36

    print_list  ir al estado 42
    print_item  ir al estado 43
    expression  ir al estado 44


Estado 30

   17 statement: READ PARI . read_list PARD PYCO

    IDEN  desplazar e ir al estado 45

    read_list  ir al estado 46


Estado 31

    9 statement_list: statement_list . statement
   12 statement: LLAVI statement_list . LLAVD

    WHILE  desplazar e ir al estado 15
    IF     desplazar e ir al estado 16
    PRINT  desplazar e ir al estado 17
    READ   desplazar e ir al estado 18
    LLAVI  desplazar e ir al estado 19
    LLAVD  desplazar e ir al estado 47
    IDEN   desplazar e ir al estado 21

    statement  ir al estado 22


Estado 32

   11 statement: IDEN ASIG . expression PYCO

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 48


Estado 33

   29 expression: PARI . expression PARD

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 49


Estado 34

   30 expression: IDEN .

    $default  reduce usando la regla 30 (expression)


Estado 35

   31 expression: ENTERO .

    $default  reduce usando la regla 31 (expression)


Estado 36

   28 expression: REST . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 50


Estado 37

    8 identifier: IDEN ASIG expression .
   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54

    $default  reduce usando la regla 8 (identifier)


Estado 38

    6 identifier_list: identifier_list COMA identifier .

    $default  reduce usando la regla 6 (identifier_list)


Estado 39

   15 statement: WHILE PARI expression . PARD statement
   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    PARD  desplazar e ir al estado 55
    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54


Estado 40

   13 statement: IF PARI expression . PARD statement ELSE statement
   14          | IF PARI expression . PARD statement
   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    PARD  desplazar e ir al estado 56
    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54


Estado 41

   21 print_item: CAD .

    $default  reduce usando la regla 21 (print_item)


Estado 42

   16 statement: PRINT PARI print_list . PARD PYCO
   19 print_list: print_list . COMA print_item

    PARD  desplazar e ir al estado 57
    COMA  desplazar e ir al estado 58


Estado 43

   18 print_list: print_item .

    $default  reduce usando la regla 18 (print_list)


Estado 44

   20 print_item: expression .
   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54

    $default  reduce usando la regla 20 (print_item)


Estado 45

   22 read_list: IDEN .

    $default  reduce usando la regla 22 (read_list)


Estado 46

   17 statement: READ PARI read_list . PARD PYCO
   23 read_list: read_list . COMA IDEN

    PARD  desplazar e ir al estado 59
    COMA  desplazar e ir al estado 60


Estado 47

   12 statement: LLAVI statement_list LLAVD .

    $default  reduce usando la regla 12 (statement)


Estado 48

   11 statement: IDEN ASIG expression . PYCO
   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    PYCO  desplazar e ir al estado 61
    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54


Estado 49

   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression
   29           | PARI expression . PARD

    PARD  desplazar e ir al estado 62
    SUMA  desplazar e ir al estado 51
    REST  desplazar e ir al estado 52
    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54


Estado 50

   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression
   28           | REST expression .

    $default  reduce usando la regla 28 (expression)


Estado 51

   24 expression: expression SUMA . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 63


Estado 52

   25 expression: expression REST . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 64


Estado 53

   26 expression: expression MULT . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 65


Estado 54

   27 expression: expression DIVI . expression

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    REST    desplazar e ir al estado 36

    expression  ir al estado 66


Estado 55

   15 statement: WHILE PARI expression PARD . statement

    WHILE  desplazar e ir al estado 15
    IF     desplazar e ir al estado 16
    PRINT  desplazar e ir al estado 17
    READ   desplazar e ir al estado 18
    LLAVI  desplazar e ir al estado 19
    IDEN   desplazar e ir al estado 21

    statement  ir al estado 67


Estado 56

   13 statement: IF PARI expression PARD . statement ELSE statement
   14          | IF PARI expression PARD . statement

    WHILE  desplazar e ir al estado 15
    IF     desplazar e ir al estado 16
    PRINT  desplazar e ir al estado 17
    READ   desplazar e ir al estado 18
    LLAVI  desplazar e ir al estado 19
    IDEN   desplazar e ir al estado 21

    statement  ir al estado 68


Estado 57

   16 statement: PRINT PARI print_list PARD . PYCO

    PYCO  desplazar e ir al estado 69


Estado 58

   19 print_list: print_list COMA . print_item

    PARI    desplazar e ir al estado 33
    IDEN    desplazar e ir al estado 34
    ENTERO  desplazar e ir al estado 35
    CAD     desplazar e ir al estado 41
    REST    desplazar e ir al estado 36

    print_item  ir al estado 70
    expression  ir al estado 44


Estado 59

   17 statement: READ PARI read_list PARD . PYCO

    PYCO  desplazar e ir al estado 71


Estado 60

   23 read_list: read_list COMA . IDEN

    IDEN  desplazar e ir al estado 72


Estado 61

   11 statement: IDEN ASIG expression PYCO .

    $default  reduce usando la regla 11 (statement)


Estado 62

   29 expression: PARI expression PARD .

    $default  reduce usando la regla 29 (expression)


Estado 63

   24 expression: expression . SUMA expression
   24           | expression SUMA expression .
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression

    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54

    $default  reduce usando la regla 24 (expression)


Estado 64

   24 expression: expression . SUMA expression
   25           | expression . REST expression
   25           | expression REST expression .
   26           | expression . MULT expression
   27           | expression . DIVI expression

    MULT  desplazar e ir al estado 53
    DIVI  desplazar e ir al estado 54

    $default  reduce usando la regla 25 (expression)


Estado 65

   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   26           | expression MULT expression .
   27           | expression . DIVI expression

    $default  reduce usando la regla 26 (expression)


Estado 66

   24 expression: expression . SUMA expression
   25           | expression . REST expression
   26           | expression . MULT expression
   27           | expression . DIVI expression
   27           | expression DIVI expression .

    $default  reduce usando la regla 27 (expression)


Estado 67

   15 statement: WHILE PARI expression PARD statement .

    $default  reduce usando la regla 15 (statement)


Estado 68

   13 statement: IF PARI expression PARD statement . ELSE statement
   14          | IF PARI expression PARD statement .

    ELSE  desplazar e ir al estado 73

    ELSE      [reduce usando la regla 14 (statement)]
    $default  reduce usando la regla 14 (statement)


Estado 69

   16 statement: PRINT PARI print_list PARD PYCO .

    $default  reduce usando la regla 16 (statement)


Estado 70

   19 print_list: print_list COMA print_item .

    $default  reduce usando la regla 19 (print_list)


Estado 71

   17 statement: READ PARI read_list PARD PYCO .

    $default  reduce usando la regla 17 (statement)


Estado 72

   23 read_list: read_list COMA IDEN .

    $default  reduce usando la regla 23 (read_list)


Estado 73

   13 statement: IF PARI expression PARD statement ELSE . statement

    WHILE  desplazar e ir al estado 15
    IF     desplazar e ir al estado 16
    PRINT  desplazar e ir al estado 17
    READ   desplazar e ir al estado 18
    LLAVI  desplazar e ir al estado 19
    IDEN   desplazar e ir al estado 21

    statement  ir al estado 74


Estado 74

   13 statement: IF PARI expression PARD statement ELSE statement .

    $default  reduce usando la regla 13 (statement)
